<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0px"
    android:background="#f0f0f0"
    tools:context=".Json" >

    <TextView
        android:id="@+id/lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_marge_vertical"
        android:layout_marginRight="10dp"
        android:layout_marginTop="@dimen/activity_marge_horizontal"
        android:text="@string/titulo"
        android:textColor="#474843"
        android:textSize="@dimen/text_size_standard"
        android:visibility="visible" />

    <ScrollView
        android:id="@+id/myScrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="30dp" >

        <TableLayout android:layout_width="fill_parent" >

            <TableRow>

                <TextView
                    android:id="@+id/lbGuatevision"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                     android:textColor="#474843"
                    android:text="@string/guatevision"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lbFoxSports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                     android:textColor="#474843"
                    android:text="@string/foxSports"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lbHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:text="@string/History"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lbNatGeo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:text="@string/NatGeo"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lbCartoon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/CartoonNetwork"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lbTreceVision"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/treceVision"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lbMtv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/Mtv"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lbCineCanal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/cineCanal"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lbTheFilmZOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/theFilmZone"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lbWarnerChannel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/warnerChannel"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>